More suggestions. Ability to accept suggestions.